fix alignment on project subheader

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -87,6 +87,10 @@
   padding-top: 12px;
 }
 
+.ProjectCardSubheader{
+  padding-left: 57px;
+}
+
 .ContentCardHeadIcon{
   margin-right: 15px;
   margin-top: -4px;
